arreglo de index

--- a/site_ViveBio/src/views/index.ejs
+++ b/site_ViveBio/src/views/index.ejs
@@ -83,7 +83,7 @@
                     <h1>Categorias</h1>
                 </div>
                 <section class="sect2">
-                    <% categories.forEach(cate=> { %>
+                    <% category.forEach(cate=> { %>
                         <article class="categorias__home">
                             <a href="/Products/All#<%= cate.name %>">
                                 <div class="<%= cate.name %>__home" id="cate"></div>
@@ -100,7 +100,6 @@
             <%- include('./partials/footer') %>
                 <script type="text/javascript" src="/javascript/carrusel.js"></script>
                 <script src="/javascript/menuMobile.js"></script>
-                <script src="/javascript/navEmergent.js"></script>
     </body>
 
 </html>
