logica de carrito incompleta

--- a/site_ViveBio/src/views/users/userprofile.ejs
+++ b/site_ViveBio/src/views/users/userprofile.ejs
@@ -49,7 +49,7 @@
                         <div class="user__info">
                             <h3>Rol : </h3>
                             <h4>
-                                <%= user.rols.name %>
+                                <%= user.rol.name %>
                             </h4>
                         </div>
                     </div>
