--- a/site_ViveBio/public/css/productCart.css
+++ b/site_ViveBio/public/css/productCart.css
@@ -39,6 +39,8 @@
 
 .cart_container input:hover,
 .cart_container input:focus,
+.cart_container .cart_button:hover,
+.cart_container .cart_box_more-less:hover,
 .cart_container select:focus,
 .cart_container select:hover {
     box-shadow: 0 0 5px var(--verdeOscuro), 0 0 10px var(--verdeOscuro), 0 0 15px var(--verdeOscuro);
@@ -69,8 +71,24 @@
 
 .cart_sect_img img {
     width: 100%;
+    height: 130px;
     border-radius: 10px;
     border: 1px solid var(--verdeFuerte);
+}
+
+.cart_problem {
+    border-radius: 5px;
+    background-color: var(--verdeOscuro);
+    box-shadow: 2px 2px 6px black;
+    padding: 10px;
+}
+
+
+.cart_sect_count form {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+
 }
 
 .cart_article_box {
@@ -167,6 +185,12 @@
     width: 100%;
     display: flex;
     justify-content: space-around;
+
+}
+
+.cart_box_button{
+    display: flex;
+    flex-direction: column;
 }
 
 .cart_button {
@@ -175,6 +199,11 @@
     background-color: var(--verdeOscuro);
     color: white;
     border: 1px solid var(--verdeFuerte);
+    display: flex;
+    justify-content: center;
+    margin-top: 5px;
+    font-size: 13px;
+    text-shadow: none;
 }
 
 .cart_sect_playment_sub {
