--- a/site_ViveBio/src/views/products/productCart.ejs
+++ b/site_ViveBio/src/views/products/productCart.ejs
@@ -11,182 +11,80 @@
                         <span class="cart_paso">Paso 2</span>
                         <span class="cart_paso">Paso 3</span>
                     </div>
-                    <article class="cart_article_box">
-                        <div class="cart_sect_1">
-                            <div class="cart_sect_img">
-                                <img src="/images/Jabon-antiseptico-07.jpg" alt="">
-                            </div>
-                            <div class="cart_sect_description">
-                                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Autem, consequuntur.</p>
-                            </div>
-                        </div>
-                        <div class="cart_sect_2">
-                            <div class="cart_sect_count">
-                                <div class="cart_box_more-less">
-                                    <span>-</span>
+                    <% if (cart.length > 0) { %>
+                        <% cart.forEach(cart => { %>
+                            <article class="cart_article_box">
+                                <div class="cart_sect_1">
+                                    <div class="cart_sect_img">
+                                        <img src="/images/<%= cart.product.productImages[0].name %>" alt="">
+                                    </div>
+                                    <div class="cart_sect_description">
+                                        <p><%= cart.product.description %> </p>
+                                    </div>
                                 </div>
-                                <div class="cart_box_count">
-                                    <span id="cart_count">01</span>
+                                <div class="cart_sect_2">
+                                    <div class="cart_sect_count">
+                                        <form action="/products/cart/cant/<%= cart.product.id %>/<%= +cart.cant - 1 %>?_method=PUT" method="POST">
+                                            <input class="cart_box_more-less" type="submit" value="-">
+                                        </form>
+                                        
+                                        <div class="cart_box_count">
+                                            <span id="cart_count"><%= cart.cant %> </span>
+                                        </div>
+                                        <form action="/products/cart/cant/<%= cart.product.id %>/<%= +cart.cant + 1  %>?_methos=PUT"  method="POST">
+                                            <input class="cart_box_more-less" type="submit" value="+">
+                                        </form>
+                                    </div>
+                                    <div class="cart_sect_price">
+                                        <span>$<%= cart.product.price %> </span>
+                                    </div>
+                                    <div class="cart_box_button">
+                                        <form action="/Products/cart/remove/<%= cart.product.id %>?_method=DELETE" method="POST">
+                                            <input class="cart_button" type="submit" value="Eliminar">
+                                        </form>
+                                        <a href="/Product/Card/<%= cart.product.id %>" class="cart_button">ver</a>
+                                    </div>
                                 </div>
-                                <div class="cart_box_more-less">
-                                    <span>+</span>
+                            </article>
+                            <div class="cart_sect_playment">
+                                <div class="cart_sect_playment_sub">
+                                    <label>Medio de Pago</label>
+                                    <select class="cart_select_payment" name="payments" id="payments" size="1">
+                                        <option value="" hidden selected >Selecciona un medio de Pago...</option>
+                                        <% payments.forEach(payment => { %>
+                                            <option value="<%= payment.id %>"><%= payment.name %></option>
+                                        <% }) %>
+                                    </select>
+                                </div>
+                                <div class="cart_sect_playment_sub">
+                                    <label for="discount_code">Código de Descuento</label>
+                                    <input class="cart_discount_payment" type="text" placeholder="Ingresar aquí código de descuento">
+                                </div>
+                                <div class="cart_sect_playment_sub">
+                                    <label >Total</label>
+                                    <input class="cart_input_payment" type="text" value="$<%= total %> " disabled>
+                                </div>
+                                <div class="cart_sect_playment_sub">
+                                    <label >Total con Descuento</label>
+                                    <input class="cart_input_payment" type="text" value="$<%= desc %> " disabled>
                                 </div>
                             </div>
-                            <div class="cart_sect_price">
-                                <span>$100</span>
-                            </div>
-                            <div class="cart_box_button">
-                                <form action="">
-                                    <input class="cart_button" type="submit" value="Eliminar">
+                            <div class="cart_buttons">
+                                <form action="/Products/cart/remove/0?_method=DELETE" method="POST">
+                                    <input class="cart_button" type="submit" value="Limpiar Carrito">
                                 </form>
-
+                                <button class="cart_button" type="reset">Siguiente Paso</button>
                             </div>
-                        </div>
-                    </article>
-                    <article class="cart_article_box">
-                        <div class="cart_sect_1">
-                            <div class="cart_sect_img">
-                                <img src="/images/Jabon-antiseptico-07.jpg" alt="">
-                            </div>
-                            <div class="cart_sect_description">
-                                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Autem, consequuntur.</p>
-                            </div>
-                        </div>
-                        <div class="cart_sect_2">
-                            <div class="cart_sect_count">
-                                <div class="cart_box_more-less">
-                                    <span>-</span>
-                                </div>
-                                <div class="cart_box_count">
-                                    <span id="cart_count">01</span>
-                                </div>
-                                <div class="cart_box_more-less">
-                                    <span>+</span>
-                                </div>
-                            </div>
-                            <div class="cart_sect_price">
-                                <span>$100</span>
-                            </div>
-                            <div class="cart_box_button">
-                                <form action="">
-                                    <input class="cart_button" type="submit" value="Eliminar">
-                                </form>
-
-                            </div>
-                        </div>
-                    </article>
-                    <article class="cart_article_box">
-                        <div class="cart_sect_1">
-                            <div class="cart_sect_img">
-                                <img src="/images/Jabon-antiseptico-07.jpg" alt="">
-                            </div>
-                            <div class="cart_sect_description">
-                                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Autem, consequuntur.</p>
-                            </div>
-                        </div>
-                        <div class="cart_sect_2">
-                            <div class="cart_sect_count">
-                                <div class="cart_box_more-less">
-                                    <span>-</span>
-                                </div>
-                                <div class="cart_box_count">
-                                    <span id="cart_count">01</span>
-                                </div>
-                                <div class="cart_box_more-less">
-                                    <span>+</span>
-                                </div>
-                            </div>
-                            <div class="cart_sect_price">
-                                <span>$100</span>
-                            </div>
-                            <div class="cart_box_button">
-                                <form action="">
-                                    <input class="cart_button" type="submit" value="Eliminar">
-                                </form>
-
-                            </div>
-                        </div>
-                    </article>
-                    <article class="cart_article_box">
-                        <div class="cart_sect_1">
-                            <div class="cart_sect_img">
-                                <img src="/images/Jabon-antiseptico-07.jpg" alt="">
-                            </div>
-                            <div class="cart_sect_description">
-                                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Autem, consequuntur.</p>
-                            </div>
-                        </div>
-                        <div class="cart_sect_2">
-                            <div class="cart_sect_count">
-                                <div class="cart_box_more-less">
-                                    <span>-</span>
-                                </div>
-                                <div class="cart_box_count">
-                                    <span id="cart_count">01</span>
-                                </div>
-                                <div class="cart_box_more-less">
-                                    <span>+</span>
-                                </div>
-                            </div>
-                            <div class="cart_sect_price">
-                                <span>$100</span>
-                            </div>
-                            <div class="cart_box_button">
-                                <form action="">
-                                    <input class="cart_button" type="submit" value="Eliminar">
-                                </form>
-
-                            </div>
-                        </div>
-                    </article>
-                    <div class="cart_sect_playment">
-                        <div class="cart_sect_playment_sub">
-                            <label>Medio de Pago</label>
-                            <select class="cart_select_payment" name="payments" id="payments" size="1">
-                                <option value="" hidden selected >Selecciona un medio de Pago...</option>
-                                <% payments.forEach(payment => { %>
-                                    <option value="<%= payment.id %>"><%= payment.name %></option>
-                                <% }) %>
-                            </select>
-                        </div>
-                        <div class="cart_sect_playment_sub">
-                            <label for="discount_code">Código de Descuento</label>
-<<<<<<< HEAD
-                            <input class="cart_select_payment" type="text" placeholder="Ingresar aquí código de descuento">
-                        </div>
-                        <div class="cart_sect_playment_sub">
-                            <label for="">Total</label>
-                            <input class="cart_select_payment" type="text" value="$100" disabled style="width: 100px ;">
-                        </div>
-                        <div class="cart_sect_playment_sub">
-                            <label for="">Total con Descuento</label>
-                            <input class="cart_select_payment" type="text" value="$100" disabled style="width: 100px ;">
-=======
-                            <input class="cart_discount_payment" type="text" placeholder="Ingresar aquí código de descuento">
-                        </div>
-                        <div class="cart_sect_playment_sub">
-                            <label >Total</label>
-                            <input class="cart_input_payment" type="text" value="$100" disabled>
-                        </div>
-                        <div class="cart_sect_playment_sub">
-                            <label >Total con Descuento</label>
-                            <input class="cart_input_payment" type="text" value="$100" disabled>
->>>>>>> Branch-Fer
-                        </div>
-                    </div>
-                    <div class="cart_buttons">
-                        <button class="cart_button" type="submit">Siguiente Paso</button>
-                        <button class="cart_button" type="reset">Limpiar Carrito</button>
-                    </div>
+                        <% }) %>
+                    <% }else{ %>
+                        <h1 class="cart_problem">No se encuentran productos</h1>
+                    <% } %> 
+                    
                 </section>
             </main>
             <%- include('../partials/footer') %>
                 <script src="/javascript/menuMobile.js"></script>
-<<<<<<< HEAD
-                <!-- <script src="/javascript/navEmergent.js"></script> -->
-=======
                 <script src="/javascript/navEmergent.js"></script>
->>>>>>> Branch-Fer
     </body>
 
 </html>
