--- a/site_ViveBio/src/views/users/userprofile.ejs
+++ b/site_ViveBio/src/views/users/userprofile.ejs
@@ -15,11 +15,11 @@
                             </div>
                             <div class="user__names">
                                 <h2>
-                                    <%= user.firstName %>
+                                    <%= user.firstname %>
                                 </h2>
 
                                 <h2>
-                                    <%= user.lastName %>
+                                    <%= user.lastname %>
                                 </h2>
 
                             </div>
