--- a/site_ViveBio/src/views/users/editProfile.ejs
+++ b/site_ViveBio/src/views/users/editProfile.ejs
@@ -17,13 +17,13 @@
                                     <input type="file" accept="image/*" id="image" name="image">
                                 </div>
                                 <div class="edit_user__names">
-                                    <input type="text" value="<%= locals.errores && errores.firstName ? old.firstName : user.firstName %>" name="firstName" id="firstName">
+                                    <input type="text" value="<%= locals.errores && errores.firstname ? old.firstname : user.firstname %>" name="firstname" id="firstname">
                                     <span class="register_alert">
-                                        <%= locals.errores && errores.firstName ? errores.firstName.msg : null %>
+                                        <%= locals.errores && errores.firstname ? errores.firstname.msg : null %>
                                     </span>
-                                    <input type="text" value="<%= locals.errores && errores.lastName ? old.lastName : user.lastName %>" name="lastName" id="newLastName">
+                                    <input type="text" value="<%= locals.errores && errores.lastname ? old.lastname : user.lastname %>" name="lastname" id="newlastname">
                                     <span class="register_alert">
-                                        <%= locals.errores && errores.lastName ? errores.lastName.msg : null %>
+                                        <%= locals.errores && errores.lastname ? errores.lastname.msg : null %>
                                     </span>
                                 </div>
                             </div>
@@ -48,7 +48,7 @@
                             <div class="edit_user__info">
                                 <h3>Rol : </h3>
                                 <h4>
-                                    <%= user.rols.name %>
+                                    <%= user.rol.name %>
                                 </h4>
                             </div>
                         </div>
