--- a/site_ViveBio/public/css/variables.css
+++ b/site_ViveBio/public/css/variables.css
@@ -12,7 +12,7 @@
     --ocre: #D9E66B;
     --azulMarino: #383843;
     --azul: #43446C;
-    --azulSuave: #3F3F82;
+    --azulSuave: #403d68;
     --lila: #AA80A6;
     --rosa: #E27FC4;
     --aquamarine: #B9F3CE;
