--- a/site_ViveBio/src/views/partials/header.ejs
+++ b/site_ViveBio/src/views/partials/header.ejs
@@ -31,11 +31,11 @@
                         <ul class="menu">
                             <li><a href="/">Home</a></li>
                             <% if (locals.userLogin && userLogin.category=="admin" ) { %>
-                                <li><a href="/products/list/0">lista</a></li>
+                                <li><a href="/products/list/0">Lista</a></li>
                                 <% }else{ %>
                                     <li><a href="/products/all">Productos</a></li>
                                     <% }%>
-                                        <li><a href="">Quienes somos</a></li>
+                                        <li><a href="">Quiénes somos</a></li>
                                         <li><a href="">Contacto</a></li>
                         </ul>
         </div>
@@ -79,11 +79,11 @@
             <ul>
                 <li><a href="/">Home</a></li>
                 <% if (locals.userLogin && userLogin.category=="admin" ) { %>
-                    <li><a href="/products/list/0">lista</a></li>
+                    <li><a href="/products/list/0">Lista</a></li>
                     <% }else{ %>
                         <li><a href="/products/all">Productos</a></li>
                         <% }%>
-                            <li><a href="">Quienes somos</a></li>
+                            <li><a href="">Quiénes somos</a></li>
                             <li><a href="">Contacto</a></li>
             </ul>
         </div>
