CRUD users finished

--- a/site_ViveBio/src/views/users/editProfile.ejs
+++ b/site_ViveBio/src/views/users/editProfile.ejs
@@ -21,7 +21,7 @@
                                     <span class="register_alert">
                                         <%= locals.errores && errores.firstname ? errores.firstname.msg : null %>
                                     </span>
-                                    <input type="text" value="<%= locals.errores && errores.lastname ? old.lastname : user.lastname %>" name="lastname" id="newlastname">
+                                    <input type="text" value="<%= locals.errores && errores.lastname ? old.lastname : user.lastname %>" name="lastname" id="lastname">
                                     <span class="register_alert">
                                         <%= locals.errores && errores.lastname ? errores.lastname.msg : null %>
                                     </span>
